api: add types for DisableSource/Status
