# pkg/webview/view.swagger.json
@@ -311,6 +311,48 @@
       },
       "description": "Time is a wrapper around time.Time which supports correct\nmarshaling to YAML and JSON.  Wrappers are provided for many\nof the factory methods that the time package offers.\n\n+protobuf.options.marshal=false\n+protobuf.as=Timestamp\n+protobuf.options.(gogoproto.goproto_stringer)=false"
     },
+    "v1alpha1ConfigMapDisableSource": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string",
+          "title": "The name of the ConfigMap"
+        },
+        "key": {
+          "type": "string",
+          "description": "The key where the enable/disable state is stored."
+        }
+      },
+      "title": "Specifies a ConfigMap to control a DisableSource"
+    },
+    "v1alpha1DisableSource": {
+      "type": "object",
+      "properties": {
+        "configMap": {
+          "$ref": "#/definitions/v1alpha1ConfigMapDisableSource",
+          "title": "This DisableSource is controlled by a ConfigMap"
+        }
+      },
+      "title": "Points at a thing that can control whether something is disabled"
+    },
+    "v1alpha1DisableStatus": {
+      "type": "object",
+      "properties": {
+        "disabled": {
+          "type": "boolean",
+          "format": "boolean",
+          "description": "Whether this is currently disabled."
+        },
+        "lastUpdateTime": {
+          "type": "string", "format": "date-time",
+          "description": "The last time this status was updated."
+        },
+        "reason": {
+          "type": "string",
+          "description": "The reason this status was updated."
+        }
+      }
+    },
     "v1alpha1UIBoolInputSpec": {
       "type": "object",
       "properties": {
@@ -688,6 +730,14 @@
           "type": "integer",
           "format": "int32",
           "description": "Order expresses the relative order of resources in the UI when they're not\notherwise sorted. Lower integers go first. When two resources have the same\norder, they should be sorted by name.\n\nWhen UIResources are generated from the Tiltfile, we use the order they\nwere added to the Tiltfile for the Order field.\n\n+optional"
+        },
+        "disableSource": {
+          "$ref": "#/definitions/v1alpha1DisableSource",
+          "description": "Indicates how to disable this resource."
+        },
+        "disableStatus": {
+          "$ref": "#/definitions/v1alpha1DisableStatus",
+          "description": "Whether/why/when this status is currently disabled."
         }
       },
       "title": "UIResourceStatus defines the observed state of UIResource"
